# nudl

./: .bazelignore  .bazeliskrc  .bazelrc  .clang-format  .gitignore  BUILD.bazel  CPPLINT.cfg  FILES.txt  README.md  WORKSPACE  analyze.sh  bazel-bin  bazel-nudl  bazel-out  bazel-testlogs  index-sort-f.html  index-sort-l.html  index.html  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  requirements_beam_lock.txt  requirements_interactive.txt  requirements_interactive_lock.txt  requirements_lock.txt
analysis/: basic_converter.cc.func-sort-c.html  basic_converter.cc.func.html  basic_converter.cc.gcov.html  basic_converter.h.func-sort-c.html  basic_converter.h.func.html  basic_converter.h.gcov.html  converter.cc.func-sort-c.html  converter.cc.func.html  converter.cc.gcov.html  dependency_analyzer.cc.func-sort-c.html  dependency_analyzer.cc.func.html  dependency_analyzer.cc.gcov.html  errors.cc.func-sort-c.html  errors.cc.func.html  errors.cc.gcov.html  errors.h.func-sort-c.html  errors.h.func.html  errors.h.gcov.html  expression.cc.func-sort-c.html  expression.cc.func.html  expression.cc.gcov.html  function.cc.func-sort-c.html  function.cc.func.html  function.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  module.cc.func-sort-c.html  module.cc.func.html  module.cc.gcov.html  named_object.cc.func-sort-c.html  named_object.cc.func.html  named_object.cc.gcov.html  names.cc.func-sort-c.html  names.cc.func.html  names.cc.gcov.html  pragma.cc.func-sort-c.html  pragma.cc.func.html  pragma.cc.gcov.html  python_converter.cc.func-sort-c.html  (+32 more)
bazel/: cython.bzl  ndl.bzl
bazel/pyright/: BUILD.bazel  package-lock.json  package.json  pyright.bzl  run_pyright.js
conversion/: convert_tool.cc.func-sort-c.html  convert_tool.cc.func.html  convert_tool.cc.gcov.html  converter.cc.func-sort-c.html  converter.cc.func.html  converter.cc.gcov.html  index-sort-f.html  index-sort-l.html  index.html  pseudo_converter.cc.func-sort-c.html  pseudo_converter.cc.func.html  pseudo_converter.cc.gcov.html  python_converter.cc.func-sort-c.html  python_converter.cc.func.html  python_converter.cc.gcov.html  python_names.cc.func-sort-c.html  python_names.cc.func.html  (+1 more)
jupyter/: BUILD.bazel  codeutil.py  codeutil_test.py  livy_session.py  livy_session_test.py  livy_test_server.py  magics.py  run_livy_test_server.py
nudl/analysis/: BUILD.bazel  README.md  analysis.h  basic_converter.cc  basic_converter.h  convert.cc  converter.cc  converter.h  dependency_analyzer.cc  dependency_analyzer.h  errors.cc  errors.h  expression.cc  expression.h  function.cc  function.h  module.cc  module.h  named_object.cc  named_object.h  names.cc  names.h  pragma.cc  pragma.h  python_converter.cc  python_converter.h  scope.cc  scope.h  type_spec.cc  type_spec.h  type_store.cc  type_store.h  type_utils.cc  type_utils.h  types.cc  types.h  vars.cc  vars.h
nudl/analysis/testing/: BUILD.bazel  analysis_test.cc  analysis_test.h  constructors_test.cc  coverage_test.cc  expression_test.cc  general_test.cc  lambda_test.cc  names_test.cc  types_test.cc
nudl/analysis/testing/testdata/: BUILD.bazel  assign_example.ndl  builtin.ndl  builtins.ndl  cdm.ndl  example.ndl  lambda.ndl  problems.ndl
nudl/analysis/testing/testdata/constructors_test/: composed_constructs.pb  define_constructor.pb  simple_constructs.pb  structure_constructs.pb  typedef_imported.pb  typedef_simple.pb  typedef_submodule.pb  typedef_templated.pb
nudl/analysis/testing/testdata/coverage_test/: import_stmt.pb  vars_set.pb
nudl/analysis/testing/testdata/general_test/: ancestor_type_bind.pb  assign_basic.pb  compatible_nullable_results1.pb  compatible_nullable_results2.pb  compatible_nullable_results3.pb  compatible_nullable_results4.pb  compatible_nullable_results5.pb  compatible_yeld_results.pb  deep_call.pb  deep_call_object.pb  default_bind_on_funtype.pb  dot_access_function.pb  dot_access_member.pb  dot_call.pb  empty_list.pb  empty_map.pb  empty_set.pb  extract_full_name.pb  filter_name.pb  function_member.pb  if_binding.pb  if_elseif.pb  if_elseif_else.pb  if_simple.pb  if_yield.pb  import_alias.pb  lambda_vars.pb  late_default_bind.pb  late_default_bind2.pb  late_default_bind3.pb  literal_bool.pb  literal_bytes.pb  literal_float32.pb  literal_float64.pb  literal_index.pb  literal_index_uint.pb  literal_int16.pb  literal_int32.pb  literal_int64.pb  literal_int8.pb  (+43 more)
nudl/analysis/testing/testdata/lambda_test/: abstract_lambda_var.pb  arg_passed.pb  call_lambda.pb  full_any.pb  lambda_builtin.pb  lambda_default_value.pb  lambda_default_value_with_return.pb  lambda_double_infer.pb  lambda_external.pb  lambda_fluent.pb  lambda_infer.pb  lambda_simple.pb  multiple_choices.pb  return_lambda.pb
nudl/analysis/testing/testdata/submodule/: __init__.ndl  compute.ndl
nudl/conversion/: BUILD.bazel  _convert_nudl.pyx  convert.cc  convert_flags.cc  convert_flags.h  convert_nudl.py  convert_nudl_test.py  convert_tool.cc  convert_tool.h  converter.cc  converter.h  pseudo_converter.cc  pseudo_converter.h  python_converter.cc  python_converter.h  python_names.cc
nudl/conversion/pylib/: BUILD.bazel  WORKSPACE  aggregate.ndl  aggregate_v2.ndl  dataproc.ndl  dataset.ndl  dataset_beam.ndl  dataset_pandas.ndl  dataset_spark.ndl  datetime.ndl  flags.ndl  nudl_builtins.ndl  nudl_datetime.ndl  nudl_import_test.py
nudl/conversion/pylib/examples/: assign_example.ndl  cdm.ndl  claim.ndl  dataproc.ndl  dataset_test.ndl  examples.ndl  join_example.ndl  problems.ndl
nudl/conversion/pylib/examples/submodule/: __init__.ndl  compute.ndl
nudl/conversion/pylib/nudl/: __init__.py  dataproc.py  dataset.py  dataset_beam.py  dataset_pandas.py  dataset_spark.py  flags.py
nudl/grammar/: BUILD.bazel  NudlDslLexer.g4  NudlDslParser.g4  README.md  dsl.cc  dsl.h  dsl_test.cc  tree_builder.cc  tree_builder.h  tree_util.cc  tree_util.h
nudl/proto/: .dsl.proto.swp  BUILD.bazel  analysis.proto  dsl.proto
nudl/status/: BUILD.bazel  status.cc  status.h  status_test.cc  testing.h
nudl/testing/: BUILD.bazel  protobuf_matchers.cc  protobuf_matchers.h  stacktrace.cc  stacktrace.h
(+40 files in other folders)
