load("@aspect_rules_js//js:defs.bzl", "js_binary")

load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_binary(
    name = "pyright_launcher",
    data = ["//bazel/pyright:node_modules/pyright"],
    entry_point = "run_pyright.js",
    visibility = ["//visibility:public"],
)
