#
# Copyright 2022 Nuna inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
package(default_visibility = ["//visibility:public"])

load("@nuna_nudl//external/cpplint:cpplint.bzl", "cpplint")
load("@nuna_nudl//bazel:cython.bzl", "pyx_library")

cc_library(
    name = "conversion",
    srcs = [
        "converter.cc",
        "pseudo_converter.cc",
        "python_converter.cc",
        "python_names.cc",
    ],
    hdrs = [
        "converter.h",
        "pseudo_converter.h",
        "python_converter.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//nudl/analysis",
        "//nudl/status",
        "//nudl/testing:stacktrace",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@com_googlesource_code_re2//:re2",
    ],
)

cc_library(
    name = "convert_tool",
    srcs = ["convert_tool.cc"],
    hdrs = ["convert_tool.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":conversion",
        "//nudl/analysis",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "convert_flags",
    srcs = ["convert_flags.cc"],
    hdrs = ["convert_flags.h"],
    visibility = ["//visibility:private"],
    deps = [
        ":convert_tool",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/status",
    ],
)

cc_binary(
    name = "convert",
    srcs = ["convert.cc"],
    linkstatic = True,
    deps = [
        ":convert_flags",
        ":convert_tool",
        "@com_github_google_glog//:glog",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:symbolize",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)

pyx_library(
    name = "_convert_nudl",
    srcs = ["_convert_nudl.pyx"],
    data = ["//nudl/conversion/pylib:nudl_base_ndl"],
    py_deps = [
        "//nudl/conversion/pylib:nudl",
        "//nudl/conversion/pylib:nudl_base",
    ],
    deps = [":convert_tool"],
)

py_library(
    name = "convert_nudl",
    srcs = ["convert_nudl.py"],
    imports = ["."],
    deps = [":_convert_nudl"],
)

py_test(
    name = "convert_nudl_test",
    srcs = ["convert_nudl_test.py"],
    imports = ["@nuna_nudl//"],
    deps = [":convert_nudl"],
)

cpplint(skip = [":_convert_nudl.cpp"])
