package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")
load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")

proto_library(
    name = "dsl",
    srcs = ["dsl.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
    ],
)

cc_proto_library(
    name = "dsl_cc",
    deps = [":dsl"],
)

proto_library(
    name = "analysis",
    srcs = ["analysis.proto"],
    deps = [":dsl"],
)

cc_proto_library(
    name = "analysis_cc",
    deps = [":analysis"],
)
