#
# Copyright 2022 Nuna inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

package(default_visibility = ["//visibility:public"])

load("@rules_python//python:defs.bzl", "py_library")
load("@nuna_nudl//bazel:ndl.bzl", "nudl_py_binary", "nudl_py_library")
load("@nuna_nudl//bazel/pyright:pyright.bzl", "pyright_test")

filegroup(
    name = "nudl_builtins_ndl",
    srcs = ["nudl_builtins.ndl"],
)

nudl_deps = [
    "@pip_deps_absl_py//:pkg",
    "@pip_deps_dataclass_csv//:pkg",
    "@pip_deps_faker//:pkg",
    "@pip_deps_numpy//:pkg",
    "@pip_deps_nuna_sql_tools//:pkg",
    "@pip_deps_pandas//:pkg",
    "@pip_deps_pyarrow//:pkg",
    "@pip_deps_pyspark//:pkg",
    "@pip_deps_pytz//:pkg",
    "@pip_deps_smart_open//:pkg",
]

py_library(
    name = "nudl",
    srcs = [
        "nudl/__init__.py",
        "nudl/dataproc.py",
        "nudl/dataset.py",
        "nudl/dataset_spark.py",
        "nudl/flags.py"
    ],
    imports = ["."],
    visibility = ["//visibility:public"],
    deps = nudl_deps,
)

pyright_test(
    name = "nudl_pyright_test",
    srcs = [":nudl"],
    deps = nudl_deps,
    imports = ["."],
    extra_pyright_args = """{
      "pythonVersion": "3.9"
    }""",
)


py_test(
    name = "nudl_import_test",
    srcs = ["nudl_import_test.py"],
    deps = [
        ":nudl",
    ],
)

nudl_py_library(
    name = "nudl_base",
    srcs = [
        "dataproc.ndl",
        "dataset.ndl",
        "dataset_spark.ndl",
        "flags.ndl",
        "nudl_builtins.ndl",
        "nudl_datetime.ndl",
    ],
    imports = ["nudl/conversion/pylib/"],
    visibility = ["//visibility:public"],
)

nudl_py_library(
    name = "examples_structures",
    srcs = [
        "examples/cdm.ndl",
        "examples/claim.ndl",
    ],
    imports = ["nudl/conversion/pylib/"],
    deps = [
        ":nudl_base",
    ],
)

nudl_py_binary(
    name = "examples_assign_example",
    srcs = [
        "examples/assign_example.ndl",
    ],
    imports = ["nudl/conversion/pylib/"],
    deps = [
        ":examples_structures",
        ":nudl_base",
    ],
)

nudl_py_binary(
    name = "examples_join_example",
    srcs = [
        "examples/join_example.ndl",
    ],
    imports = ["nudl/conversion/pylib/"],
    deps = [
        ":examples_structures",
        ":nudl_base",
    ],
)
