package(default_visibility = ["//nudl/analysis:__subpackages__"])

exports_files(
    glob(["*.ndl"]) + glob(["submodule/*.ndl"]),
)

filegroup(
    name="lambda_test",
    srcs = glob(["lambda_test/*.pb"])
)

filegroup(
    name="general_test",
    srcs = glob(["general_test/*.pb"])
)

filegroup(
    name="coverage_test",
    srcs = glob(["coverage_test/*.pb"])
)

filegroup(
    name="constructors_test",
    srcs = glob(["constructors_test/*.pb"])
)
